kuber/backbox_deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    run: backbox
  name: backbox-deployment
spec:
  replicas: 2
  strategy:
   type: RollingUpdate
   rollingUpdate:
    maxSurge: 3
    maxUnavailable: 1
  selector:
    matchLabels:
      app: backbox
  template:
    metadata:
      labels:
        app: backbox
    spec:
     containers:
     - image: backbox/opavlov:v0.1
       name: backbox
       ports:
       - containerPort: 8000
         name: http
       livenessProbe:
        httpGet:
          path: /ping
          port: 8000
        initialDelaySeconds: 10
        periodSeconds: 60
        successThreshold: 1
        timeoutSeconds: 90
        failureThreshold: 6
