kuber/nc.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nettest
  namespace: default
spec:
  containers:
  - name: nettest
    image: tafthorne/netcat-debian
    command:
      - sleep
      - "3600"
    imagePullPolicy: IfNotPresent
