kuber/bb-service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: backbox
  name: bb-service
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8000
  selector:
    app: backbox
  type: ClusterIP
status:
  loadBalancer: {}
