kuber/cbr-emulator.yaml
apiVersion: v1
kind: Service
metadata:
   name: cbr-emulator
spec:
   clusterIP: None
   ports:
   - protocol: TCP
     port: 80
     targetPort: 80
   type: ClusterIP
---
apiVersion: v1
kind: Endpoints
metadata:
  name: cbr-emulator
subsets:
  - addresses:
    - ip: 192.168.64.1
    ports:
      - port: 80
