kuber/fb-service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: frontbox
  name: fb-service
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 3000
  selector:
    app: frontbox
  type: ClusterIP
status:
  loadBalancer: {}
