kuber/mysql-service.yaml
apiVersion: v1
kind: Service
metadata:
   name: mysql
spec:
   clusterIP: None
   ports:
   - protocol: TCP
     port: 3306
     targetPort: 3306
   type: ClusterIP
---
apiVersion: v1
kind: Endpoints
metadata:
  name: mysql
subsets:
  - addresses:
    - ip: 192.168.64.1
    ports:
      - port: 3306
