kuber/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-web
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: k8s.pavlov.com
    http:
       paths:
       - path: /
         pathType: Prefix
         backend:
           service:
             name: fb-service
             port:
              number: 3000
